--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "LinkedIn"
-      icon: "fas fa-fw fa-linkedin"
+      icon: "fa fa-linkedin-square"
       url: "https://linkedin.com/in/diahmed"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
@@ -78,7 +78,7 @@ author:
 footer:
   links:
     - label: "LinkedIn"
-      icon: "fas fa-fw fa-linkedin"
+      icon: "fa fa-linkedin-square"
       url: "https://linkedin.com/in/diahmed"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
