--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
-    - label: "LinkedIn"
-      icon: "fa fa-linkedin-square"
+    - label: "LinkedIn1"
+      icon: "fab fa fa-linkedin-square"
       url: "https://linkedin.com/in/diahmed"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
@@ -77,8 +77,8 @@ author:
 
 footer:
   links:
-    - label: "LinkedIn"
-      icon: "fa fa-linkedin-square"
+    - label: "LinkedIn1"
+      icon: "fab fa fa-linkedin-square"
       url: "https://linkedin.com/in/diahmed"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
