--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Dewan's Blog
+email: hey@dewanahmed.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+ Hello! I’m Dewan Ahmed, and I’m a software engineer and open-source developer advocate at Red Hat. Before starting at Red Hat, I have worked at IBM for six years as a developer, QA lead, consultant and developer advocate. This site serves my blog, where I share my technical experience in articles and tutorials as well as random thoughts.
+twitter_username: DewanAhmed
+github_username: dewan-ahmed
 minimal_mistakes_skin: default
 search: true
 
