--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,9 @@
 title: Dewan's Blog
 email: hey@dewanahmed.com
 description: >- # this means to ignore newlines until "baseurl:"
- Hello! I’m Dewan Ahmed, and I’m a software engineer and open-source developer advocate at Red Hat. Before starting at Red Hat, I have worked at IBM for six years as a developer, QA lead, consultant and developer advocate. This site serves my blog, where I share my technical experience in articles and tutorials as well as random thoughts.
+ Hello! I’m Dewan Ahmed, and I’m a software engineer and open-source developer advocate at Red Hat. Before starting at Red Hat, I have worked at IBM for six years as a developer, QA lead, consultant and developer advocate.
+ Besides work, I offer career coaching to students, newgrads and professionals who are trying to transition to the software industry. This site serves my blog, where I share my technical experience, articles on career as well as some random thoughts. 
+ When I’m not working, I spend quality time with my wife and toddler 👨‍👩‍👦 and play 🎱.
 twitter_username: DewanAhmed
 github_username: dewan-ahmed
 minimal_mistakes_skin: default
