--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,9 @@ paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
+url: "https://dewandemo.github.io" # the base hostname & protocol for your site
+baseurl: "/dewandemo"
+
 include:
   - _pages
 
