--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,12 @@ search: true
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: America/Moncton
 
 include:
   - _pages
@@ -57,7 +58,7 @@ plugins:
 
 author:
   name   : "Dewan Ahmed"
-  avatar : "/assets/images/IBM_100_1002112731.jpg"
+  avatar : "/assets/images/dewans-photo.jpg"
   bio    : "I love to learn, build and share my experiences."
   links:
     - label: "LinkedIn"
@@ -71,7 +72,7 @@ author:
       url: "https://github.com/dewan-ahmed"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:hey@dewanahmed.com"
+      url: "mailto:dewan.ishtiaque@gmail.com"
 
 footer:
   links:
@@ -86,7 +87,7 @@ footer:
       url: "https://github.com/"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:hey@dewanahmed.com"
+      url: "mailto:dewan.ishtiaque@gmail.com"
 
 defaults:
   # _posts
@@ -97,7 +98,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: true
+      comments: false
       share: true
       related: true
   # _pages
