--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ logo:
   desktop_height: "32px"
   desktop_width: "120px"
 
+hero_image: /assets/images/hero-image.png
+
 home: 
   limit_services: 6
 
